tests/ui/dummy.stderr
error: set_dummy test
 --> tests/ui/dummy.rs:9:8
  |
9 | dummy!(need_default);
  |        ^^^^^^^^^^^^
